--- a/Full dark theme/userContent.css
+++ b/Full dark theme/userContent.css
@@ -1,6 +1,6 @@
 /* You can find an updated version here: https://github.com/Izheil/Quantum-Nox-Firefox-Dark-Full-Theme */
 /* Made by Izheil */
-/* Last updated: 18/07/2020 */
+/* Last updated: 06/09/2020 */
 
 /* This part imports the Addons file if there is one, so that you don't have to edit the dynamic URL
 from the addons rules every time we update anything here */
@@ -141,10 +141,18 @@ input[type=number], input[type=search], input[type=tel], input[type=url], textar
 
 /*------ END OF INPUT BOXES TEXT - SCROLLBAR COLORS BELOW ------*/
 :root{
-  scrollbar-color: var(--scrollbars-thumb-color) var(--scrollbars-track-color) !important;
-  scrollbar-width: var(--scrollbars-width) !important}
+  scrollbar-color: var(--scrollbars-thumb-color) var(--scrollbars-track-color);
+  scrollbar-width: var(--scrollbars-width)}
 
-*|* {scrollbar-width: var(--scrollbars-width) !important}
+*|* {scrollbar-width: var(--scrollbars-width)}
+
+@-moz-document url-prefix(about:) {
+	:root{
+	  scrollbar-color: var(--scrollbars-thumb-color) var(--scrollbars-track-color) !important;
+	  scrollbar-width: var(--scrollbars-width) !important}
+
+	*|* {scrollbar-width: var(--scrollbars-width) !important}
+}
 /*------ END OF SCROLLBAR COLORS ------*/
 
 /* Ublock Origin element picker window */
